# exatrxk-cpp-ctd2022

./: .gitignore  README.md
data/: event000000100-spacepoint.csv  in_e.csv
inf-cpp/: CMakeLists.txt  README.md  dump_processed_data.py  inference-onnx.cpp  inference.cpp  inference_client.cpp  install_dep.sh  make.sh  mmio_read.h  test_connected_components.cpp
inf-cpp/ExaTrkX/: CMakeLists.txt
inf-cpp/ExaTrkX/include/: ExaTrkTriton.hpp  ExaTrkXTiming.hpp  ExaTrkXTrackFinding.hpp  ExaTrkXTrackFindingBase.hpp  ExaTrkXTrackFindingTriton.hpp  ExaTrkXTrackFindingTritonOne.hpp  ExaTrkXTrackFindingTritonPython.hpp  ExaTrkXTriton.hpp  ExaTrkXUtils.hpp
inf-cpp/ExaTrkX/libFRNN/: CMakeLists.txt
inf-cpp/ExaTrkX/src/: ExaTrkTriton.cpp  ExaTrkXTrackFinding.cpp  ExaTrkXTrackFindingBase.cpp  ExaTrkXTrackFindingTriton.cpp  ExaTrkXTrackFindingTritonOne.cpp  ExaTrkXTrackFindingTritonPython.cpp  ExaTrkXTriton.cpp  ExaTrkXUtils.cpp  build_edges.hpp  mmio_read.h
inf-cpp/cmake/: Findcugraph.cmake
inf-cpp/datanmodels/: CutEdge.csv  in_e1000.csv
inf-cpp/datanmodels/lrt/inputs/: evt_0.csv  evt_1.csv  evt_10.csv  evt_11.csv  evt_12.csv  evt_13.csv  evt_14.csv  evt_15.csv  evt_16.csv  evt_17.csv  evt_18.csv  evt_19.csv  evt_2.csv  evt_20.csv  evt_21.csv  evt_22.csv  evt_23.csv  evt_24.csv  evt_25.csv  evt_26.csv  evt_27.csv  evt_28.csv  evt_29.csv  evt_3.csv  evt_30.csv  evt_31.csv  evt_32.csv  evt_33.csv  evt_34.csv  evt_35.csv  evt_36.csv  evt_37.csv  evt_38.csv  evt_39.csv  evt_4.csv  evt_40.csv  evt_41.csv  evt_42.csv  evt_43.csv  evt_44.csv  (+60 more)
inf-cpp/datanmodels/torchscript/: gnn.pt
inf-cpp/docker/: Dockerfile
inf-cpp/python/: dump_processed_data.py  inference.py  inference32Hydra.py  plot_results.py
inf-cpp/python/conf/.ipynb_checkpoints/: config-checkpoint.yaml
inf-cpp/python/convert-torchscript/: convert_gnn.py  inference_lr.ipynb
inf-cpp/python/convert-torchscript/trained_models_v0/: README.md  pipeline_test.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/Embedding/model/: embedding_base.py  embedding_test.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/Embedding/model/Models/: inference.py
inf-cpp/python/convert-torchscript/trained_models_v0/Embedding/trained/: events.out.tfevents.1633814545.cgpu02.63588.0  hparams.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/Filter/model/: filter_base.py  filter_test.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/Filter/trained/: events.out.tfevents.1633878568.cgpu06.4179.0  hparams.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/GNN/model/: gnn_test.yaml  utils.py
inf-cpp/python/convert-torchscript/trained_models_v0/GNN/model/Models/: agnn.py  inference.py
inf-cpp/python/convert-torchscript/trained_models_v0/GNN/trained/: events.out.tfevents.1633913906.cgpu06.46799.0  hparams.yaml
inf-cpp/python/convert-torchscript/trained_models_v0/GNN/trained/checkpoints/: epoch=76-step=692999.ckpt  epoch=80-step=728999.ckpt
models/embed/: config.pbtxt
src/: CMakeLists.txt  simple_grpc_infer_client.cc  simple_http_infer_client.cc
triton-client/: CMakeLists.txt  README.md
triton-client/src/c++/examples/: simple_http_infer_client.cc  simple_http_infer_clientembed.cc
triton-client/src/python/examples/: simple_http_infer_client.py
triton_example/: CMakeLists.txt
triton_example/data/: in_e.csv  out_be.csv  out_e.csv  out_fil.csv  out_fil_edge.csv  out_gnn.csv
triton_example/models/applyfilter/: config.pbtxt
triton_example/models/applyfilter/1/: model.py
triton_example/models/embed/: config.pbtxt
triton_example/models/embedo/: config.pbtxt
triton_example/models/exatrkx/: client.py  config.pbtxt
triton_example/models/faiss/: client.py  config.pbtxt
triton_example/models/faiss/1/: model.py
triton_example/models/fil_gnn/: client.py  config.pbtxt  model.py
triton_example/models/fil_gnn/1/: model.py
triton_example/models/filter/: config.pbtxt
triton_example/models/frnn/: client.py  client_test.py  config.pbtxt  model.py
triton_example/models/frnn/1/: model.py
triton_example/models/gnn/: config.pbtxt
triton_example/models/wcc/: client.py  config.pbtxt
triton_example/models/wcc/1/: model.py
triton_example/models_trackML/embed/: config.pbtxt
triton_example/models_trackML/embedo/: config.pbtxt
triton_example/models_trackML/filter/: config.pbtxt
triton_example/models_trackML/filter/1/: model.pt
triton_example/models_trackML/filtero/: config.pbtxt
triton_example/models_trackML/filtero/1/: model.onnx
triton_example/models_trackML/gnn/1/: model.pt
triton_example/models_trackML/gnn_tf/: config.pbtxt
triton_example/models_trackML/gnn_tf/1/: model.pt  saved_model.pb
triton_example/models_trackML/gnn_tf/1/variables/: variables.data-00000-of-00001  variables.index
triton_example/models_trackML/gnno/: config.pbtxt
triton_example/models_trackML/gnno/1/: model.onnx
triton_example/src/: CMakeLists.txt  simple_grpc_infer_client.cc
